border-spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ ul {
 table {
     width: 1100px;
     margin-bottom: 20px;
+    border-spacing: 0px;
 }
 
 .special-column {
